# niflheim

./: CLAUDE.md  Makefile  README.md  cloudbuild.yaml  justfile
.claude/agents/: architect-review.md  backend-architect.md  fastapi-pro.md  python-pro.md
backend/api/: .dockerignore  CLAUDE.md  Dockerfile  justfile  pyproject.toml
backend/api/src/api/: __init__.py  main.py
backend/api/src/api/routers/: items.py
backend/macrow/: CLAUDE.md  Dockerfile  justfile  pyproject.toml
backend/macrow/scripts/: 0_auth.sh  _lib.sh  foods.sh  health.sh  journal.sh  recipes.sh  users.sh
backend/macrow/src/app/: application.py  auth.py  main.py
backend/macrow/src/app/config/: constants.py  settings.py
backend/macrow/src/app/models/: common.py  food.py  journal.py  recipe.py  user.py
backend/macrow/src/app/routes/: deps.py  foods.py  health.py  journal.py  recipe.py  user.py
backend/macrow/src/app/services/: food.py  journal.py  off.py  recipe.py  user.py
backend/macrow/src/app/utils/: error.py  logger.py
backend/macrow/src/macrow/: __init__.py  main.py
backend/macrow/src/macrow/routers/: items.py
backend/mcp-server/: pyproject.toml
backend/mcp-server/src/mcp_server/: server.py
backend/proxy/: CLAUDE.md  Caddyfile  Dockerfile  justfile
frontend/portfolio/: .dockerignore  CLAUDE.md  Dockerfile  README.md  justfile  nginx.conf  package-lock.json  package.json
frontend/portfolio/public/: index.html
frontend/portfolio/src/: App.js
gcp/: .gitignore  artifact_registry.tf  build.tf  cloudbuild.tf  compute_backends.tf  iam.tf  ip.tf  justfile  load_balancer.tf  provider.tf  repo_connection.tf  run.tf  secret_manager.tf  service_account.tf  storage.tf  variable.tf
gcp/apis/: apis.tf  storage.tf  variable.tf
gcp/apis/config/: variable.tfvars
gcp/config/: variable.tfvars
gcp/modules/cloud_run/: main.tf  outputs.tf  variables.tf
gcp/modules/cloud_run_lb/: main.tf  outputs.tf  variable.tf
gcp/portfolio/: artifact_registry.tf  backend.tf  run.tf  storage.tf  variable.tf
scripts/: init.sh
(+55 files in other folders)
