[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jules Rubin", email = "58521821+julesrubin@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
